src/objects/MBA_Staging_Account__c.object
<CustomObject>
    <description>Used for the integration between MBA and Salesforce.  Fields are to be read only for all users and object is only visible to admins.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to notify the trigger code whether or not this staging record is for a paid subscription or not.</description>
        <inlineHelpText>Field to notify the trigger code whether or not this staging record is for a paid subscription or not.</inlineHelpText>
        <label>IsPaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_External_Account_ID__c</fullName>
        <inlineHelpText>When migrating data from one system to another (for example, MBA to BMP), the ID of the account changes from system to system.  Enter the value of the original id from the originating system to avoid duplicate account creation.</inlineHelpText>
        <label>Original External Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of record</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BMP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportPin__c</fullName>
        <inlineHelpText>Pin ID unique to a client&apos;s account</inlineHelpText>
        <label>Support Pin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MBA Staging Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MSA-{0000}</displayFormat>
        <label>MBA Staging Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBA Staging Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>